<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 AtaraxiaGoddess. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxWidth="280dp"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center_horizontal"
    tools:ignore="TextFields,ButtonStyle">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectDate"
        style="@style/Widget.BudgetBrewer.Button.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:maxWidth="280dp"
        android:text="@string/transaction_date_hint"
        tools:ignore="TextContrastCheck,VisualLintSystemUi" />

    <EditText
        android:id="@+id/etSource"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/transaction_source_hint"
        android:inputType="text"
        android:importantForAutofill="no"
        android:paddingHorizontal="8dp"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Body" />

    <TextView
        android:id="@+id/tvSourceCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="end"
        android:text="@string/character_counter"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Caption" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/transaction_amount_hint"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:paddingHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Body" />

    <TextView
        android:id="@+id/tvAmountError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Error"
        android:textColor="@color/text_error"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/etTag"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/tag_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="8dp"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Body" />

    <TextView
        android:id="@+id/tvTagCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="end"
        android:text="@string/character_counter"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Caption" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/note_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:paddingHorizontal="8dp"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Body" />

    <TextView
        android:id="@+id/tvNoteCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="end"
        android:text="@string/note_counter"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Caption" />

    <!-- Warning message -->
    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/transaction_exceeds_warning"
        android:textAppearance="@style/TextAppearance.BudgetBrewer.Error"
        android:textColor="@color/text_error"
        android:visibility="invisible" />

</LinearLayout>
